--- a/package.json
+++ b/package.json
@@ -42,13 +42,16 @@
     "isomorphic-fetch": "^2.2.1",
     "limax": "^1.3.0",
     "mongoose": "^4.4.20",
+    "qs": "^6.4.0",
     "react": "^15.1.0",
+    "react-bootstrap": "^0.30.10",
     "react-dom": "^15.1.0",
     "react-helmet": "^3.1.0",
     "react-intl": "^2.1.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "redux": "^3.5.2",
+    "redux-crud": "^3.0.5",
     "redux-thunk": "^2.1.0",
     "sanitize-html": "^1.11.4"
   },
