--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,14 @@
 {
   "presets": ["react", "es2015", "stage-0"],
-  "plugins": ["react-hot-loader/babel"],
+  "plugins": [
+    "react-hot-loader/babel",
+    [
+      "module-resolver",
+      {
+         "root": [".", "./client"],
+      }
+    ]
+  ],
   "env": {
     "production": {
       "presets": ["es2015", "react", "react-optimize", "es2015-native-modules", "stage-0"]
