--- a/.eslintrc
+++ b/.eslintrc
@@ -23,7 +23,9 @@
     "max-len": [1, 180, 4],
     "arrow-body-style": [0],
     "react/jsx-no-bind": [0],
+    "react/jsx-filename-extension": [0],
     "import/no-unresolved": [0], // Until import plugin supports webpack 2 resolveModules
+    "import/no-named-as-default": [0],
     "no-multi-spaces": ["error", { exceptions: {
       "ImportDeclaration": true,
       "VariableDeclarator": true
