--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "babel-core": "^6.9.1",
     "babel-resolver": "^1.1.0",
+    "bluebird": "^3.5.0",
     "body-parser": "^1.15.1",
     "compression": "^1.6.2",
     "cross-env": "^1.0.8",
@@ -48,6 +49,7 @@
     "intl-locales-supported": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
     "limax": "^1.3.0",
+    "lodash": "^4.17.4",
     "mongoose": "^4.4.20",
     "npm": "^4.5.0",
     "qs": "^6.4.0",
@@ -68,6 +70,7 @@
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
     "babel-plugin-module-resolver": "^2.7.0",
+    "babel-plugin-transform-promise-to-bluebird": "^1.1.1",
     "babel-plugin-webpack-loaders": "^0.7.0",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
