--- a/.eslintrc
+++ b/.eslintrc
@@ -18,10 +18,11 @@
     "classes": true
   },
   "rules": {
-    "comma-dangle": [1, "always-multiline"],
-    "no-underscore-dangle" : 0,
-    "max-len": [1, 180, 4],
     "arrow-body-style": [0],
+    "comma-dangle": [1, "always-multiline"],
+    "func-names": ["error", "as-needed"],
+    "max-len": [1, 180, 4],
+    "no-underscore-dangle": 0,
     "react/jsx-no-bind": [0],
     "react/jsx-filename-extension": [0],
     "import/no-unresolved": [0], // Until import plugin supports webpack 2 resolveModules
