--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "RepairClinicFE",
   "version": "0.0.1",
-  "description": "Repair Clinic React front end",
+  "description": "Repair Clinic React Front End",
   "scripts": {
-    "test": "cross-env NODE_ENV=test PORT=8080 MONGO_URL=mongodb://localhost:27017/mern-test node_modules/.bin/nyc node --harmony-proxies node_modules/.bin/ava",
+    "test": "cross-env NODE_ENV=test PORT=8080 node_modules/.bin/nyc node --harmony-proxies node_modules/.bin/ava",
     "watch:test": "npm run test -- --watch",
     "cover": "nyc npm run test",
     "check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
@@ -20,19 +20,12 @@
     "lint",
     "test"
   ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Hashnode/mern-starter.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Hashnode/mern-starter/issues"
-  },
-  "homepage": "https://github.com/Hashnode/mern-starter#readme",
-  "author": "Prashant Abhishek <prashant.abhishek7g@gmail.com>, Mayank Chandola <imayankchd@gmail.com>, Sandeep Panda <sandeep@hashnode.com>, Syed Fazle Rahman <fazle@hashnode.com>, Alkshendra Maurya <alkshendra@hashnode.com>",
+  "author": "John McLaughlin",
   "license": "MIT",
   "dependencies": {
     "babel-core": "^6.9.1",
     "babel-resolver": "^1.1.0",
+    "backbone": "^1.3.3",
     "bluebird": "^3.5.0",
     "body-parser": "^1.15.1",
     "compression": "^1.6.2",
@@ -50,7 +43,6 @@
     "isomorphic-fetch": "^2.2.1",
     "limax": "^1.3.0",
     "lodash": "^4.17.4",
-    "mongoose": "^4.4.20",
     "npm": "^4.5.0",
     "qs": "^6.4.0",
     "react": "^15.1.0",
@@ -98,7 +90,6 @@
     "jsdom": "^9.2.1",
     "json-loader": "^0.5.4",
     "mock-css-modules": "^1.0.0",
-    "mockgoose": "^6.0.3",
     "nock": "^8.0.0",
     "nodemon": "^1.9.2",
     "null-loader": "^0.1.1",
@@ -156,8 +147,7 @@
       "client/routes.js",
       "server/util/setup-test-env.js",
       "server/util/test-helpers.js",
-      "server/config.js",
-      "server/dummyData.js"
+      "server/config.js"
     ],
     "reporter": [
       "lcov",
